Added script.js for drag and drop

--- a/index.html
+++ b/index.html
@@ -34,9 +34,8 @@
         </div>
     </div>
 
-    <script>
-        // JavaScript logic will be added in future milestones
-    </script>
+    <!-- Link to our new external JavaScript file -->
+    <script src="script.js"></script>
 
 </body>
 </html>
