Fixed drag and drop and modified the style.css

--- a/index.html
+++ b/index.html
@@ -22,8 +22,12 @@
     <!-- The Main Area for Canvas and Output -->
     <div id="main-content">
         <!-- The Canvas where blocks are dropped -->
-        <div id="canvas">
+        <div id="canvas-header">
             <h2>Canvas</h2>
+            <!-- Added a Run Button -->
+            <button id="run-btn">Run Code</button>
+        </div>
+        <div id="canvas">
             <!-- Dropped blocks will appear here -->
         </div>
 
@@ -39,4 +43,3 @@
 
 </body>
 </html>
-
